# softdesk

./: .gitignore  README.md  cspell.json  db 20240328.sqlite3  db-ori.sqlite3  db.sqlite3  poetry.lock1  pyproject.toml  test_basic.py  test_create.py  test_detail.py
.cspell/: custom-dictionary-workspace.txt
.history/softdesk/: views_20240413102330.py  views_20240413102336.py  views_20240413102340.py  views_20240413102344.py  views_20240413102346.py  views_20240413102402.py  views_20240413102411.py  views_20240413102416.py  views_20240413102516.py  views_20240413102552.py  views_20240413102558.py  views_20240413102603.py  views_20240413102611.py  views_20240413102614.py  views_20240413102621.py  views_20240413102624.py
.vscode.tmp/: launch.json  settings.json
helpdesk/: asgi.py  settings.py  urls.py  wsgi.py
softdesk/: admin.py  comment_serializers.py  customuser_serializers.py  issue_serializers.py  models.py  permissions.py  permissions.py1  permissions1.py  project_serializers.py  serializers copy.py  serializers-ori.py  serializers.py  serializers.py1  serializers1.py  serializers2.py  serializers3.py  test_brouvreau.py  tests.py  urls.py  views-ori.py  views.py  views1.py  views2.py  views3.py
softdesk/migrations/: 0001_initial.py  0002_auto_20240124_1043.py  0003_alter_customuser_email.py  0004_alter_customuser_email.py  0005_alter_customuser_email.py  0006_comment_issue_project.py  0007_alter_project_contributor.py  0008_alter_project_contributor.py  0009_alter_project_contributor.py  0010_alter_project_contributor.py  0013_issue.py  0015_issue_project.py  (+11 more)
(+2 files in other folders)
